--- a/Delta/Supporting Files/Info.plist
+++ b/Delta/Supporting Files/Info.plist
@@ -179,7 +179,7 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>DLTAVersion</key>
-	<string>1.7.1</string>
+	<string>2.0b1</string>
 	<key>GCSupportedGameControllers</key>
 	<array>
 		<dict>
